--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -10,7 +10,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install sphinx-autodoc-typehints
-          pip install sphinx_rtd_them
+          pip install sphinx_rtd_theme
       - uses: actions/checkout@master
         with:
           requirements: src/requirements.txt
